--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,8 +15,13 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v1
-
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.ref }}
+      - name: Run Flutter tasks
+        uses: subosito/flutter-action@v1
+        with:
+          flutter-version: '3.0.0'
       - name: Deploy iOS Beta to TestFlight via Fastlane
         uses: maierj/fastlane-action@v1.4.0
         with:
